<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".presentation.MainFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/offentlich"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:typeface="monospace" />

        <LinearLayout
            android:id="@+id/layoutWeekCalendarActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/light_green_200"
                android:padding="@dimen/margin_large"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/t_todo_list"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/margin_large"
                android:text="@string/todo"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:typeface="monospace" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutMonthCalendarActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/light_blue_200"
                android:padding="@dimen/margin_large"
                android:src="@drawable/v_logo" />

            <TextView
                android:id="@+id/tV24"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_large"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/firma"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutPageCalendarActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/red_300"
                android:padding="@dimen/margin_large"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/tNotizbuch"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_large"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/notizbuch"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:typeface="monospace" />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="@string/privat"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:typeface="monospace" />

        <LinearLayout
            android:id="@+id/layoutSimpleCalendarActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/orange_300"
                android:padding="@dimen/margin_large"
                android:src="@drawable/ic_calendar" />

            <TextView
                android:id="@+id/tVideoScaner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_large"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/scaner"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:typeface="monospace" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutInfiniteCalendarActivity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/purple_300"
                android:padding="@dimen/margin_large"
                android:src="@drawable/ic_passwordcolor" />

            <TextView
                android:id="@+id/tPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_large"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/pass"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:typeface="monospace" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutEdaFragment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="?android:attr/selectableItemBackground"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:background="@color/purple_300"
                android:padding="@dimen/margin_large"
                android:src="@drawable/ic_eda" />

            <TextView
                android:id="@+id/tEda"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_large"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center_vertical"
                android:text="@string/eda"
                android:textAllCaps="true"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_20"
                android:textStyle="bold"
                android:typeface="monospace" />

        </LinearLayout>


        <FrameLayout
            android:id="@+id/p_h_first_fragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </FrameLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal"
            android:text="@string/license"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_16"
            android:textStyle="bold"
            android:typeface="monospace" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/activity_vertical_margin2"
            android:gravity="center_horizontal"
            android:text="@string/jahr"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_size_10"
            android:textStyle="bold"
            android:typeface="monospace" />


    </LinearLayout>

</androidx.core.widget.NestedScrollView>